# asset-core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: assimp_importer.h  binary_exporter.h  filesystem.h  tsm_skeleton.h  tsm_vertex.h  types.h
include/common/: asset_desc.h  filesystem.h  header.h  image.h  material.h  mesh.h  scene.h
include/exporter/: image_exporter.h  material_exporter.h  mesh_exporter.h  scene_exporter.h
include/importer/: image_importer.h  mesh_importer.h
include/loader/: loader.h
include/offline/: exporter.h  image_exporter.h  image_importer.h  importer.h  material_exporter.h  mesh_exporter.h  mesh_importer.h  options.h  scene_exporter.h  tsm_animation.h  tsm_headers.h  tsm_material.h
include/runtime/: loader.h
src/brdf_lut/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  filesystem.cpp  image.cpp
src/core/: assimp_importer.cpp
src/exporter/: CMakeLists.txt  image_exporter.cpp  material_exporter.cpp  mesh_exporter.cpp  scene_exporter.cpp
src/image_export/: CMakeLists.txt  main.cpp
src/importer/: CMakeLists.txt  image_importer.cpp  mesh_importer.cpp
src/loader/: CMakeLists.txt  loader.cpp
src/material_export/: CMakeLists.txt  main.cpp
src/mesh_export/: CMakeLists.txt  main.cpp
src/offline/: CMakeLists.txt  assimp_importer.cpp  binary_exporter.cpp  exporter.cpp  filesystem.cpp  image_exporter.cpp  image_importer.cpp  importer.cpp  material_exporter.cpp  mesh_exporter.cpp  mesh_importer.cpp  scene_exporter.cpp
src/runtime/: CMakeLists.txt  loader.cpp
src/sh_project/: CMakeLists.txt  main.cpp
